# IFCManager

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: element_data(2).csv  example1.ipynb  example2.ipynb  ifcoenshell.ipynb  model_opensees.py  structural_elements_data.xlsx
examples/ifc_output_data/: extracted_ifc_data.csv  extracted_ifc_data.json  extracted_ifc_data.xlsx
examples/sample_models/: CASA TIPO 11111.ifc  Edificio_modelo.ifc  Project1.ifc
src/ifc_manager/: __init__.py
src/ifc_manager/core/: __init__.py  ifc_parser.py  visualization.py
src/ifc_manager/utils/: geometry_utils.py
src/ifc_openseespy_linker/: __init__.py
src/ifc_openseespy_linker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ifc_openseespy_linker/core/: __init__.py  ifc_parser.py  opensees_converter.py  visualization.py
