[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ifc-aec-tool"
version = "0.1.0"
description = "A Python tool for loading, analyzing, and visualizing AEC models from IFC files"
authors = [
    {name = "Nicolás Játiva", email = "estructurasnj@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "plotly>=5.0.0",
    "ifcopenshell>=0.7.0"
]